@@ -1,3 +1,9 @@
+2010-07-27	Vinu Rajashekhar <vinutheraj@gmail.com>
+
+	PR 1630/cpukit
+	* posix/src/psignalchecksignal.c, posix/src/sigtimedwait.c:
+	sigtimedwait() was not completely following the POSIX specification.
+
 2010-07-26	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* score/src/threadget.c: Conditionalize a check that can only occur
